--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
     "singleQuote": false,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "printWidth": 90
+    "printWidth": 80,
+    "insertFinalNewline": true,
+    "endOfLine": "lf"
 }
