--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
